# robot-ecu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
app/: FreeRTOSConfig.h  Makefile.inc  def_settings.h  iwdg.c  iwdg.h  main.c  main.h
app/conf/: FreeRTOSConfig.h  def_rtos.h  tasks_stack_and_priority.h
app/debug/: debug_interface.c  debug_interface.h  debug_process.c  debug_process.h
app/motor/: controller.c  controller.h  filter.c  filter.h  motor.c  motor.h  motor_interface.h  sensors.c  sensors.h
app/motor/connection/: uart_interface.c  uart_interface.h  uart_process.c  uart_process.h
app/motor/control/: bldc.c  bldc.h
app/usb/: usb_device.c
boot/: Makefile.inc  main.c  main.h
doc/: General.md
doc/.obsidian/: app.json  appearance.json  core-plugins.json  workspace.json
doc/.obsidian/themes/Monokai/: theme.css
doc/features/: Control theory.md  Other.md
doc/hard/: esc_g4.md  stm32g431cbu.md
doc/templates/: Заметка.md
doc/workflow/: debug.md  python-autoformat.md
lib/: def_macro.h  def_sys.h  def_types.c  def_types.h  ring_buff.c  ring_buff.h  ring_list.c  ring_list.h  ringbuff.c  ringbuff.h
platform/: platform.h
platform/m0/: CMakeLists.txt  linker_script.ld  platform.c  platform_inc_m0.h  stm32_assert.h  sys_config_m0.h
platform/m0/c0/: adc.c  adc.h  dma.c  dma.h  gpio.c  gpio.h  int.c  int.h  sys.c  sys.h  tim.c  tim.h  usart.c  usart.h
platform/m0/core/HAL/inc/: stm32g4xx_hal.h  stm32g4xx_hal_conf.h
platform/m0/core/HAL/src/: stm32g4xx_hal.c
platform/m0/core/USB_Device/Core/Src/: usbd_conf.c
plib/: syscalls.c
shared/: def_types.c  delay.c  delay.h
